# aap-2.4-aap2.5-migration

./: README.md  ansible.cfg  pyproject.toml
aap_controller/: CHANGELOG.rst  README.md  galaxy.yml
aap_controller/changelogs/: .plugin-cache.yaml  changelog.yaml
aap_controller/changelogs/fragments/: fix_dispatch_wildcard_vars.yml  fix_doc_inventories_kind.yml  get_stats.yml  trivial_stuff.yml
aap_controller/roles/controller_ad_hoc_command/: README.md
aap_controller/roles/controller_ad_hoc_command_cancel/: README.md
aap_controller/roles/controller_applications/: README.md
aap_controller/roles/controller_bulk_host_create/: README.md
aap_controller/roles/controller_bulk_job_launch/: README.md
aap_controller/roles/controller_credential_input_sources/: README.md
aap_controller/roles/controller_credential_types/: README.md
aap_controller/roles/controller_credentials/: README.md
aap_controller/roles/controller_host_groups/: README.md
aap_controller/roles/controller_hosts/: README.md
aap_controller/roles/controller_instance_groups/: README.md
aap_controller/roles/controller_instances/: README.md
aap_controller/roles/controller_inventories/: README.md
aap_controller/tests/: configure_controller.yml  configure_controller_export_model.yml  configure_platform.yml
collections/: requirements.yml
playbooks/: 2.4_aap_exec_template.yml  2.4_export.yml  2.4_export_single_org.yml  2.5_import.yml  validate_2.5.yml
scripts/: transform_24_to_25.py  verify_yaml.py
vars/: collections-constraints.yml  dispatch.yml
vault/: credentials_secrets.yml
(+46 files in other folders)
